[package]
name = "pingora"
version = "1.0.0"
authors = ["Aroldo Goulart <Aroldogooulart@gmail.com>", "Bruno Caitano <caitano44@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
pingora = { version = "0.6.0", features = ["lb", "proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"